sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
public void bubbleSort()  {
	var swapped = true
	while ( swapped) {
		swapped=false
		for (i<-0 to GetNombreValeurs-2)
		 if (Pluspetit(getValeur(i-1),getValeur(i))   {
		 	                     echange(list(i),list(i-1))
		 	                     swapped=true
		 	                               }           
		         
	                }	    )      
}
